--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ button {
 	border-radius: 20px;
 	border: 1px solid #FF4B2B;
 	background-color: #FF4B2B;
-	color: #FFFFFF;
+	color: #ffffff;
 	font-size: 12px;
 	font-weight: bold;
 	padding: 12px 45px;
@@ -62,7 +62,7 @@ button {
 	transition: transform 80ms ease-in;
 }
 .button:hover{
-	background-color: #af171f;
+	background-color: #d12e36;
 
 }
 
@@ -76,11 +76,11 @@ button:focus {
 
 button.ghost {
 	background-color: transparent;
-	border-color: #FFFFFF;
+	border-color: #f50b0b;
 }
 
 form {
-	background-color: #FFFFFF;
+	background-color: hsl(0, 29%, 86%);
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -162,6 +162,7 @@ input {
 	overflow: hidden;
 	transition: transform 0.6s ease-in-out;
 	z-index: 100;
+	
 }
 
 .container.right-panel-active .overlay-container{
@@ -169,19 +170,20 @@ input {
 }
 
 .overlay {
-	background: #FF416C;
-	background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
+	background: #4e383d;
+	background: -webkit-linear-gradient(to right, #553f3b, #FF416C);
 	background: linear-gradient(to right, #FF4B2B, #FF416C);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: 0 0;
-	color: #FFFFFF;
+	color: #ff0000;
 	position: relative;
 	left: -100%;
 	height: 100%;
 	width: 200%;
   	transform: translateX(0);
 	transition: transform 0.6s ease-in-out;
+	background-image: url('LanyA.jpg');
 }
 
 .container.right-panel-active .overlay {
@@ -225,7 +227,7 @@ input {
 }
 
 .social-container a {
-	border: 1px solid #8d4b4b;
+	border: 1px solid #000000;
 	border-radius: 50%;
 	display: inline-flex;
 	justify-content: center;
@@ -236,8 +238,8 @@ input {
 }
 
 footer {
-    background-color: #222;
-    color: #fff;
+    background-color: #241414;
+    color: #e624249d;
     font-size: 14px;
     bottom: 0;
     position: fixed;
@@ -252,7 +254,7 @@ footer p {
 }
 
 footer i {
-    color: red;
+    color: rgb(235, 42, 42);
 }
 
 footer a {
