--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ input {
 }
 
 .container {
-	background-color: #fff;
+	background-color: #ff0051;
 	border-radius: 10px;
   	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
 			0 10px 10px rgba(0,0,0,0.22);
@@ -121,6 +121,7 @@ input {
 	left: 0;
 	width: 50%;
 	z-index: 2;
+	
 }
 
 .container.right-panel-active .sign-in-container {
@@ -171,12 +172,12 @@ input {
 
 .overlay {
 	background: #4e383d;
-	background: -webkit-linear-gradient(to right, #553f3b, #FF416C);
-	background: linear-gradient(to right, #FF4B2B, #FF416C);
+	background: -webkit-linear-gradient(to right, #ff0051, #FF416C);
+	background: linear-gradient(to right, #ff0051, #FF416C);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: 0 0;
-	color: #ff0000;
+	color: #ff0051;
 	position: relative;
 	left: -100%;
 	height: 100%;
@@ -227,7 +228,7 @@ input {
 }
 
 .social-container a {
-	border: 1px solid #000000;
+	border: 1px solid #bba4a4;
 	border-radius: 50%;
 	display: inline-flex;
 	justify-content: center;
@@ -263,8 +264,8 @@ footer a {
 }
 .button-link {
 	border-radius: 20px;
-	border: 1px solid #FF4B2B;
-	background-color: #FF4B2B;
+	border: 1px solid red;
+	background-color: red;
 	color: #FFFFFF;
 	font-size: 12px;
 	font-weight: bold;
@@ -275,5 +276,7 @@ footer a {
   }
   
   .button-link:hover {
-	background-color: #af171f;
+	background-color: #ff0051;
   }
+
+
